--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Главная страница</title>
 </head>
 <body>
-    
+    <a href="index.html">Главная страница</a>
+    <a href="catalog/catalog.html">Каталог</a>
+    <a href="contacts.html">Контакты</a>
+    <h1>Главная страница</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur harum eos omnis molestiae distinctio, reiciendis similique unde nobis alias libero praesentium consequatur quas sunt quia aut laboriosam ex. Ullam?</p>
+    <h2>Добро пожаловать на сайт</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
 </body>
 </html>
