--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -13,12 +13,12 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum veritatis animi delectus possimus fugiat cumque quibusdam, suscipit voluptates quod! Quas voluptas consectetur neque repellat dolorem repellendus, consequuntur officiis excepturi nam! Blanditiis ea esse recusandae quia, ut aspernatur neque, itaque ex odit iusto, soluta nam. Commodi temporibus non voluptatum debitis nobis eius molestiae, hic eveniet soluta, nesciunt, ad delectus et earum quasi in sequi optio deserunt quae pariatur tempora? Harum optio facilis non dolorum ducimus, dignissimos in sit ex saepe dolores dicta? Magni quaerat natus rem perferendis dolores odit repudiandae expedita, sed qui autem atque architecto reprehenderit. Magnam quod pariatur esse? Vero eos ipsa quia, autem tempore quo architecto quidem deserunt, porro quam vitae dolor in optio deleniti esse aperiam! Placeat eaque, earum voluptatem, minima, excepturi magni omnis illo hic quia iure dolorem aliquid repellendus nam ipsam laborum praesentium doloremque explicabo recusandae voluptate suscipit cupiditate quaerat? Incidunt quos libero alias!</p>
     <img width="200" src="../img/bear.jpg" alt="Мягкая игрушка медведь">
     <p><b>Мягкая игрушка медведь</b></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id beatae nemo, labore culpa distinctio placeat! Iste commodi aperiam suscipit!</p>
+    <p>Красивый и очень милый плюшевый медвежонок, очень хорошего качества! По размерам очень удобный, чтобы брать с собой на поездки. Данная плюшевая игрушка станет прекрасным подарком для ребёнка! </p>
     <img width="200" src="../img/cubes.jpg" alt="Кубики">
     <p><b>Кубики</b></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, atque. Iusto unde vitae velit tempora.</p>
+    <p>Кубики развивающие деревянные цветные 30 штук – идеальный подарок для вашего малыша! Эта игрушка не только привлекательна своим ярким дизайном, но и способствует развитию ребенка во многих аспектах. </p>
     <img width="200" src="../img/doll.jpg" alt="Кукла">
     <p><b>Кукла</b></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa placeat odit quae quidem fugit atque quasi doloribus ipsum sed quibusdam.</p>
+    <p>Кукла - это прекрасный подарок для девочки. Кукла - это не просто игрушка, она является популярным подарком для детей на день рождения или любой другой праздник. </p>
 </body>
 </html>
