--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная страница</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="../contacts.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum veritatis animi delectus possimus fugiat cumque quibusdam, suscipit voluptates quod! Quas voluptas consectetur neque repellat dolorem repellendus, consequuntur officiis excepturi nam! Blanditiis ea esse recusandae quia, ut aspernatur neque, itaque ex odit iusto, soluta nam. Commodi temporibus non voluptatum debitis nobis eius molestiae, hic eveniet soluta, nesciunt, ad delectus et earum quasi in sequi optio deserunt quae pariatur tempora? Harum optio facilis non dolorum ducimus, dignissimos in sit ex saepe dolores dicta? Magni quaerat natus rem perferendis dolores odit repudiandae expedita, sed qui autem atque architecto reprehenderit. Magnam quod pariatur esse? Vero eos ipsa quia, autem tempore quo architecto quidem deserunt, porro quam vitae dolor in optio deleniti esse aperiam! Placeat eaque, earum voluptatem, minima, excepturi magni omnis illo hic quia iure dolorem aliquid repellendus nam ipsam laborum praesentium doloremque explicabo recusandae voluptate suscipit cupiditate quaerat? Incidunt quos libero alias!</p>
+    <a class="nav_link" href="../index.html">Главная страница</a>
+    <a class="nav_link" href="catalog.html">Каталог</a>
+    <a class="nav_link" href="../contacts.html">Контакты</a>
+    <h1 class="title">Каталог</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nostrum veritatis animi delectus possimus fugiat cumque quibusdam, suscipit voluptates quod! Quas voluptas consectetur neque repellat dolorem repellendus, consequuntur officiis excepturi nam! Blanditiis ea esse recusandae quia, ut aspernatur neque, itaque ex odit iusto, soluta nam. Commodi temporibus non voluptatum debitis nobis eius molestiae, hic eveniet soluta, nesciunt, ad delectus et earum quasi in sequi optio deserunt quae pariatur tempora? Harum optio facilis non dolorum ducimus, dignissimos in sit ex saepe dolores dicta? Magni quaerat natus rem perferendis dolores odit repudiandae expedita, sed qui autem atque architecto reprehenderit. Magnam quod pariatur esse? Vero eos ipsa quia, autem tempore quo architecto quidem deserunt, porro quam vitae dolor in optio deleniti esse aperiam! Placeat eaque, earum voluptatem, minima, excepturi magni omnis illo hic quia iure dolorem aliquid repellendus nam ipsam laborum praesentium doloremque explicabo recusandae voluptate suscipit cupiditate quaerat? Incidunt quos libero alias!</p>
     <img width="200" src="../img/bear.jpg" alt="Мягкая игрушка медведь">
-    <p><b>Мягкая игрушка медведь</b></p>
-    <p>Красивый и очень милый плюшевый медвежонок, очень хорошего качества! По размерам очень удобный, чтобы брать с собой на поездки. Данная плюшевая игрушка станет прекрасным подарком для ребёнка! </p>
+    <p class="text"><b>Мягкая игрушка медведь</b></p>
+    <p class="text">Красивый и очень милый плюшевый медвежонок, очень хорошего качества! По размерам очень удобный, чтобы брать с собой на поездки. Данная плюшевая игрушка станет прекрасным подарком для ребёнка! </p>
     <img width="200" src="../img/cubes.jpg" alt="Кубики">
-    <p><b>Кубики</b></p>
-    <p>Кубики развивающие деревянные цветные 30 штук – идеальный подарок для вашего малыша! Эта игрушка не только привлекательна своим ярким дизайном, но и способствует развитию ребенка во многих аспектах. </p>
+    <p class="text"><b>Кубики</b></p>
+    <p class="text">Кубики развивающие деревянные цветные 30 штук – идеальный подарок для вашего малыша! Эта игрушка не только привлекательна своим ярким дизайном, но и способствует развитию ребенка во многих аспектах. </p>
     <img width="200" src="../img/doll.jpg" alt="Кукла">
-    <p><b>Кукла</b></p>
-    <p>Кукла - это прекрасный подарок для девочки. Кукла - это не просто игрушка, она является популярным подарком для детей на день рождения или любой другой праздник. </p>
+    <p class="text"><b>Кукла</b></p>
+    <p class="text">Кукла - это прекрасный подарок для девочки. Кукла - это не просто игрушка, она является популярным подарком для детей на день рождения или любой другой праздник. </p>
 </body>
 </html>
