--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная страница</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur harum eos omnis molestiae distinctio, reiciendis similique unde nobis alias libero praesentium consequatur quas sunt quia aut laboriosam ex. Ullam?</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
+    <a class="nav_link" href="index.html">Главная страница</a>
+    <a class="nav_link" href="catalog/catalog.html">Каталог</a>
+    <a class="nav_link" href="contacts.html">Контакты</a>
+    <h1 class="title">Главная страница</h1>
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur aspernatur harum eos omnis molestiae distinctio, reiciendis similique unde nobis alias libero praesentium consequatur quas sunt quia aut laboriosam ex. Ullam?</p>
+    <h2 class="heading_h2">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum commodi totam, eaque alias ducimus, qui voluptate sint laudantium beatae doloribus, voluptatum quisquam obcaecati? Pariatur optio qui quas repellat, nostrum laboriosam.</p>
 </body>
 </html>
